09-Ingress-Basic/kube-manifests/03-Ingress-Basic.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:  
  rules:
  - http:
      paths:
      - path: /
        pathType : Exact
        backend:
          service: 
            name: app1-nginx-clusterip-service
            port: 
              number : 80
